# computer-use-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.rdp  Dockerfile.vnc  PRODUCTION_README.md  README.md  VM_AUTOMATION_POC_README.md  demo_form_automation.py  demo_mcp_integration.py  pad.txt  poc_session_f7947d2f_20250903_081531.json  pyproject.toml  pyrightconfig.json  run_poc.py  run_production.py  vm_config.sample.json
.github/workflows/: ci.yml  test.yml
infrastructure/docker/: .dockerignore  Dockerfile.arm  Dockerfile.rdp  docker-compose.yml
scripts/: demo_form_automation.py  demo_mcp_integration.py
src/: main.py  production.py  setup_models.py
src/agent/: examples.py  function_definitions.py  vision_tools.py
src/agent/mcp/: __init__.py  handlers.py  mcp_server.py  tools.py
src/agent_template/: cli.py  config.py  prompts.py
src/agent_template/agents/: starter.py
src/agent_template/tools/: time_tools.py
src/agents/: __init__.py  app_controller.py  shared_context.py  vm_navigator.py
src/automation/: __init__.py  desktop_control.py  form_interface.py  orchestrator.py
src/automation/core/: __init__.py  base.py  types.py
src/automation/local/: __init__.py  desktop_control.py  form_interface.py
src/automation/remote/: __init__.py
src/automation/remote/agents/: __init__.py  app_controller.py  vm_navigator.py
src/automation/remote/connections/: __init__.py  desktop.py  rdp.py  vnc.py
src/automation/remote/tools/: __init__.py  input_actions.py  screen_capture.py
src/connections/: __init__.py  base.py  rdp_connection.py  vnc_connection.py
src/demo/: agent_demo.py  backends.py  desktop_vm_demo.py  main.py  tools.py
src/ocr/: __init__.py  detector.py  finder.py  reader.py  setup_models.py  verification.py
src/ocr/actions/: __init__.py  primitives.py  verify.py
src/ocr/adapters/: __init__.py  input.py  screen.py
src/ocr/runtime/: __init__.py  context.py  runner.py
src/ocr/ui/: __init__.py  model.py  selectors.py
src/ocr/verification/: __init__.py  verification.py
src/ocr/vision/: __init__.py  detector.py  finder.py  ocr.py
src/tools/: __init__.py  input_actions.py  screen_capture.py  verification.py
src/vision/: __init__.py  detector.py  finder.py  ocr_reader.py  reader.py  ui_finder.py  verification.py
src/vm/: main.py
src/vm/agents/: __init__.py  app_controller.py  vm_navigator.py
src/vm/automation/: __init__.py  app_controller.py  vm_navigator.py
src/vm/connections/: __init__.py  desktop_connection.py  rdp_connection.py  vnc_connection.py
src/vm/tools/: __init__.py  input_actions.py  screen_capture.py  verification.py
src/vm/vision/: __init__.py  ui_finder.py
src/vm_automation/: __init__.py  poc_main.py  setup_models.py
src/vm_automation/agents/: __init__.py  app_controller.py  shared_context.py  vm_navigator.py
src/vm_automation/tests/: conftest.py  test_integration.py
src/vm_automation/tools/: __init__.py  input_actions.py  screen_capture.py
src/vm_automation/vision/: __init__.py  ocr_reader.py  yolo_detector.py
tests/: __init__.py  conftest.py  mock_components.py  pytest.ini  run_tests.py  test_clicking_unit_mocks.py  test_integration.py  test_patient_workflow_integration.py  test_production_integration.py  test_smoke.py  test_vm_integration.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/automation/core/: __init__.py  test_base.py  test_types.py
tests/unit/automation/local/: __init__.py  test_desktop_control.py  test_form_interface.py
tests/unit/automation/remote/connections/: __init__.py  test_rdp.py  test_vnc.py
