[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "python-agent-template-uv"
version = "0.1.0"
description = "Modern Python agent template using uv + OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.12,<3.13"
keywords = ["agents", "llm", "openai", "uv"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
]

# Runtime deps
dependencies = [
  "openai>=1.52.0",
  "openai-agents>=0.2.9",  # Agents SDK
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "tenacity>=8.3.0",
  "rich>=13.7.0",
]

# Dev / tooling

[project.scripts]
agent-starter = "agent_template.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E","F","I","UP","B","SIM","C4","PIE","RUF"]
lint.ignore = ["E203","E501"]  # leave formatting to ruff formatter, cap lines via formatter
exclude = ["dist", "build", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_template"]
include = ["src/agent_template/**"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.7",
  "pyright>=1.1.379",
  "pre-commit>=3.7.1"
]
