[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "computer-use-agent"
version = "0.1.0"
description = "Modern Python agent template using uv + OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.12,<3.13"
keywords = ["agents", "llm", "openai", "uv"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
]

# Runtime deps
dependencies = [
  "openai>=1.52.0",
  "openai-agents>=0.2.9", # Agents SDK
  # VM Automation POC dependencies
  "ultralytics>=8.0.0",
  "onnxruntime>=1.16.0",
  "paddlepaddle>=2.5.0",
  "paddleocr>=2.7.0",
  "opencv-python>=4.8.0",
  "vncdotool>=1.2.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "pillow>=10.0.0",
  "numpy>=1.24.0",
  "onnx>=1.19.0",
]

# Dev / tooling

[project.scripts]
vm-automation = "src.main:cli_main"

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E","F","I","UP","B","SIM","C4","PIE","RUF"]
lint.ignore = ["E203","E501"]  # leave formatting to ruff formatter, cap lines via formatter
exclude = ["dist", "build", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration tests (require VM connection)",
  "mock: marks tests as using mock components (no VM required)",
  "slow: marks tests as slow running",
  "vnc: marks tests as VNC-specific integration tests",
  "rdp: marks tests as RDP-specific integration tests",
  "patient_workflow: marks tests as patient workflow tests (healthcare applications)",
  "ui_detection: marks tests as UI detection tests (YOLO/OCR)",
  "real_vm: marks tests as requiring real VM connections",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["src/**"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.7",
  "pyright>=1.1.379",
  "pre-commit>=3.7.1",
  # POC evaluation dependencies
  "deepeval>=0.21.0",
  "arize-phoenix>=4.0.0",
]
