[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "computer-use-agent"
version = "0.1.0"
description = "Modern Python agent template using uv + OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.12,<3.13"
keywords = ["agents", "llm", "openai", "uv"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
]

# Runtime deps
dependencies = [
  "fastapi>=0.116.1",
  "numpy>=2.3.2",
  "onnx>=1.19.0",
  "onnxruntime>=1.22.1",
  "openai>=1.105.0",
  "openai-agents>=0.2.11",
  "opencv-python>=4.11.0.86",
  "paddleocr[all]>=3.2.0",
  "paddlepaddle>=3.1.1",
  "pillow>=11.3.0",
  "ultralytics>=8.3.193",
  "uvicorn>=0.35.0",
  "vncdotool>=1.2.0",
]

# Dev / tooling

[project.scripts]
vm-automation = "vm.main:cli_main"

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E","F","I","UP","B","SIM","C4","PIE","RUF"]
lint.ignore = ["E203","E501"]  # leave formatting to ruff formatter, cap lines via formatter
exclude = ["dist", "build", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration tests (require VM connection)",
  "mock: marks tests as using mock components (no VM required)",
  "vnc: marks tests as VNC-specific integration tests",
  "rdp: marks tests as RDP-specific integration tests",
  "patient_workflow: marks tests as patient workflow tests (healthcare applications)",
  "ui_detection: marks tests as UI detection tests (YOLO/OCR)",
  "real_vm: marks tests as requiring real VM connections",
]

[tool.hatch.build.targets.wheel]
packages = ["src/automation", "src/agent", "src/ocr", "src/vm"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "arize-phoenix>=11.32.1",
    "deepeval>=3.4.7",
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.12",
]
